RESOLVED FIXED199845
Hang in WebCore::AccessibilityRenderObject::visiblePositionRangeForLine.
https://bugs.webkit.org/show_bug.cgi?id=199845
Summary Hang in WebCore::AccessibilityRenderObject::visiblePositionRangeForLine.
Andres Gonzalez
Reported 2019-07-16 18:34:58 PDT
Hang in WebCore::AccessibilityRenderObject::visiblePositionRangeForLine.
Attachments
Patch (3.12 KB, patch)
2019-07-16 18:48 PDT, Andres Gonzalez
no flags
Patch (2.82 KB, patch)
2019-07-16 21:21 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2019-07-16 18:48:51 PDT
Andres Gonzalez
Comment 2 2019-07-16 19:29:42 PDT
chris fleizach
Comment 3 2019-07-16 19:57:38 PDT
Comment on attachment 374270 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=374270&action=review > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:-1970 > - if (!lineCount || !m_renderer) NSNotFound is an apple thing, so this check needs to be in the Mac wrapper. also probably sufficient to check if it’s equals to nsnotfound. I think it’s already uint max so it won’t matter checking higher > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:1983 > + || visiblePos.equals(savedVisiblePos)) surprised the == operator doesn’t call .equals directly
Andres Gonzalez
Comment 4 2019-07-16 21:21:20 PDT
Andres Gonzalez
Comment 5 2019-07-16 21:29:10 PDT
(In reply to chris fleizach from comment #3) > Comment on attachment 374270 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=374270&action=review > > > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:-1970 > > - if (!lineCount || !m_renderer) > > NSNotFound is an apple thing, so this check needs to be in the Mac wrapper. > also probably sufficient to check if it’s equals to nsnotfound. I think it’s > already uint max so it won’t matter checking higher > Done. > > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:1983 > > + || visiblePos.equals(savedVisiblePos)) > > surprised the == operator doesn’t call .equals directly The equals method has a FIXME comment in the header file: // FIXME: Combine this function with operator== and looking at the implementation, it does a lot more than operator==.
WebKit Commit Bot
Comment 6 2019-07-17 10:06:02 PDT
Comment on attachment 374279 [details] Patch Clearing flags on attachment: 374279 Committed r247519: <https://trac.webkit.org/changeset/247519>
WebKit Commit Bot
Comment 7 2019-07-17 10:06:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.